Neo4j/Neo4j-Prometheus/yaml/my-deploy-prometheus-adapter.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-adapter-tls
  labels:
    name: prometheus-adapter
  name: prometheus-adapter
  namespace: default
spec:
  ports:
    - name: https
      port: 443
      targetPort: 6443
  selector:
    app: prometheus-adapter
  type: ClusterIP
---
#aggiungo
#apiVersion: rbac.authorization.k8s.io/v1beta1
#kind: ClusterRole
#metadata:
#  name: prometheus
#rules:
#  - apiGroups: [""]
#    resources:
#      - nodes
#      - nodes/metrics
#      - services
#      - endpoints
#      - pods
#    verbs: ["get", "list", "watch"]
#  - apiGroups: [""]
#    resources:
#      - configmaps
#    verbs: ["get"]
#  - apiGroups:
#      - networking.k8s.io
#    resources:
#      - ingresses
#    verbs: ["get", "list", "watch"]
#  - nonResourceURLs: ["/metrics"]
#    verbs: ["get"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus-adapter
  name: prometheus-adapter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-adapter
  template:
    metadata:
      labels:
        app: prometheus-adapter
      name: prometheus-adapter
    spec:
      #serviceAccountName: custom-metrics-apiserver
      serviceAccountName: custom-metrics-apiserver
      containers:
        - name: prometheus-adapter
          image: directxman12/k8s-prometheus-adapter-amd64
          args:
            - --secure-port=6443
            - --tls-cert-file=/var/run/serving-cert/tls.crt
            - --tls-private-key-file=/var/run/serving-cert/tls.key
            - --logtostderr=true
            #- --prometheus-url=http://prometheus.default.svc:9090/
            - --prometheus-url=http://prometheus-operated.default.svc:9090/
            - --metrics-relist-interval=1m
            - --v=4
            - --config=/etc/adapter/config.yaml
          ports:
            - containerPort: 6443
          volumeMounts:
            - mountPath: /var/run/serving-cert
              name: volume-serving-cert
              readOnly: true
            - mountPath: /etc/adapter/
              name: config
              readOnly: true
            - mountPath: /tmp
              name: tmp-vol
      volumes:
        - name: volume-serving-cert
          secret:
            secretName: prometheus-adapter-tls
        - name: config
          configMap:
            name: adapter-config
        - name: tmp-vol
          emptyDir: {}
