Neo4j/Neo4j-Prometheus/yaml/my-deploy-neo4j.yaml
#deployment
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: neo4j
spec:
  replicas: 1
  selector:
      app: neo4j
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: neo4j
    spec:
      containers:
        #----------------
        # neo4j container
        #----------------
        - image: neo4j:latest
          name: neo4j
          ports:
            - containerPort: 7474
              protocol: TCP
              name: http
            - containerPort: 7687
              protocol: TCP
              name: bolt
#            - containerPort: 7473
#              protocol: TCP
#              name: https
            - containerPort: 2004
              protocol: TCP
              name: metrics
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: "/neo4j/data"
              name: neo4j-data
            - mountPath: "/neo4j/logs"
              name: neo4j-logs
            - mountPath: "/neo4j/conf"
              name: neo4j-conf
      volumes:
        #neo4j volumes
        - name: neo4j-data
        - name: neo4j-logs
        - name: neo4j-conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    #trigget neo4j
    - imageChangeParams:
        automatic: true
        containerNames:
          - neo4j
        from:
          kind: ImageStreamTag
          name: neo4j:latest
      type: ImageChange
    - type: ConfigChange
---
#service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: neo4j
  name: neo4j
spec:
  ports:
    - name: metrics
      port: 2004
      protocol: TCP
      targetPort: 2004
    - name: http
      port: 7474
      protocol: TCP
      targetPort: 7474
    - name: bolt
      port: 7687
      protocol: TCP
      targetPort: 7687
  selector:
    app: neo4j
---
#route metrics
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: neo4j
  name: neo4j-metrics
spec:
  port:
    targetPort: metrics
  path: /metrics
  to:
    kind: Service
    name: neo4j
    weight: 100
  wildcardPolicy: None
#---
#route http
#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  labels:
#    app: neo4j
#  name: neo4j-http
#spec:
#  port:
#    targetPort: http
#  #path: /metrics
#  to:
#    kind: Service
#    name: neo4j
#    weight: 100
#  wildcardPolicy: None
