Neo4j/Neo4j-Prometheus/yaml/my-deploy-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prometheus
---
#route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  port:
    targetPort: web
  path:
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
